# mycode

./: .gitignore  README.md
2024.09.11/: A_Orders.cpp  CMakeLists.txt  D_FastandFat.cpp  P2678.cpp  test.cpp
2024rehabilitation/: CMakeLists.txt  main.cpp
2024rehabilitation/BIT/: CMakeLists.txt  bit1.cpp  bit2.cpp  bit3.cpp
2024rehabilitation/BST/: BST.cpp  CMakeLists.txt  main.cpp
2024rehabilitation/BinaryOrder/: CF1311F.cpp  CMakeLists.txt  discretization.cpp  inverse_pair.cpp  main.cpp
2024rehabilitation/ChthollyTree/: CMakeLists.txt  main.cpp
2024rehabilitation/Graph/: CMakeLists.txt  P2910.cpp  SPFA.cpp  SPFA_another.cpp
2024rehabilitation/MinCostMaxFlow/: CMakeLists.txt
2024rehabilitation/MonotoneQueue/: CMakeLists.txt
2024rehabilitation/MonotoneStack/: CMakeLists.txt  main.cpp
2024rehabilitation/NetworkFlow/: CMakeLists.txt  Dinic.cpp  main.cpp
2024rehabilitation/NumberTheory/: CMakeLists.txt  MultiplicativeInverse.cpp
2024rehabilitation/SCC/: B3609Kosaraju.cpp  CMakeLists.txt  P3387缩点.cpp
2024rehabilitation/SanFen/: CMakeLists.txt  main.cpp
2024rehabilitation/SegmentTree/: CMakeLists.txt  P3372_8.txt  SegmentTree1.cpp  main.cpp  test.cpp
2024rehabilitation/SegmentTreeOptimizedGraph/: CMakeLists.txt  luogu.cpp  main.cpp
2024rehabilitation/SimulatedAnnealing/: CMakeLists.txt  main.cpp  test01.cpp
2024rehabilitation/SparseTable/: CMakeLists.txt
2024rehabilitation/Tarjan/: CMakeLists.txt  P2863.cpp  main.cpp  tarjan.cpp
2024rehabilitation/TopoSort/: CMakeLists.txt  bfs.cpp  calculate_all_topo_order.cpp  dfs.cpp
2024rehabilitation/TreeDecomposition/: CMakeLists.txt  Treedecomposition.cpp  lca.cpp  main.cpp
2024rehabilitation/Trie/: CMakeLists.txt  main.cpp
2024rehabilitation/bigraph/: BigraphMatch.cpp  CMakeLists.txt
2024rehabilitation/binary search/: CMakeLists.txt  STL.cpp  bs1.cpp  bs2.cpp  main.cpp
2024rehabilitation/dp/: .clang-format  CMakeLists.txt  (+2 more)
2025/NetworkFlow24Problems/: CMakeLists.txt  Dinic.cpp  MinCostMaxFlow.cpp  P1251.cpp  P2756.cpp  P2761.cpp  P2763.cpp  P2765.cpp  P2765simulation.cpp  P3254.cpp  P3355.cpp  P4014.cpp  P4015.cpp  P4016.cpp  main.cpp
Codeforces/Codeforces Round 970 (Div. 3)/: A. Sakurako's Exam.cpp  B. Square or Not.cpp  B_bitset.cpp  CMakeLists.txt  C_Longest_Good_Array.cpp  D_Sakurako_s_Hobby.cpp  D_dsu.cpp  EAlternatingString.cpp  test.cpp
Contests/0922/: A.cpp  C.cpp  CMakeLists.txt  D.cpp  dalao.cpp  main.cpp
Contests/Chengdu/: A.cpp  B.cpp  Bself - 副本.cpp  Bself.cpp  CMakeLists.txt  G.cpp  I.cpp  I_test.cpp  J.cpp  K.cpp  main.cpp  test.in  test.out  text.in
Contests/PTAtest/: CMakeLists.txt  T10.cpp  T11.cpp  T12.cpp  T2.cpp  T5.cpp  T6.cpp  T7.cpp  T8.cpp  T9.cpp  main.cpp
NOJ/: CMakeLists.txt  T003.cpp  T008.cpp  T009.cpp  T010.cpp  T011.cpp  T012.cpp  T013.cpp  T014.cpp  T015.cpp  T016.cpp  T017.cpp  T018.cpp  T019.cpp  T020.cpp  T021.cpp  T022.cpp  T023.cpp  T024.cpp  T025.cpp  T026.cpp  T027.cpp  T028.cpp  T029.cpp  T030.cpp  T031.cpp  T032.cpp  T033.cpp  T034.cpp  T035.cpp  T036.cpp  T037.cpp  T038.cpp  T039.cpp  T040.cpp  T041.cpp  T042.cpp  T043.cpp  T044.cpp  T045.cpp  (+54 more)
Notes/: 2023夏令营.md  关于语言.md  笔记.html  笔记.md
RustPlay/: main.rs
Templates/: 01_Trie.cpp  BigraphWeightMatch.cpp  BinaryIndexTree.cpp  BinarySearch.cpp  ChthollyTree.cpp  Dinic.cpp  DinicSSP.cpp  DisjointSetUnion.cpp  EdmondsKarp.cpp  FordFulkerson.cpp  GaussElimination.cpp  MonotoneQueue.cpp  MonotoneStack.cpp  SegmentTree.cpp  SparseTable.cpp  Templates.html  Templates.md  TreeDecomposition.cpp  Trie.cpp
TmpFile/: test.txt  test01.txt
TmpFile/EasyX2048/: .clang-format  CMakeLists.txt  game_draw.cpp  game_draw.h  game_logic.cpp  game_logic.h  main.cpp
(+190 files in other folders)
