cmake_minimum_required(VERSION 3.30)
project(NetworkFlow24Problems)

set(CMAKE_CXX_STANDARD 20)

add_executable(NetworkFlow24Problems main.cpp)
add_executable(P2756 P2756.cpp)
add_executable(P2765 P2765.cpp)
add_executable(P2765simulation P2765simulation.cpp)
add_executable(P4016 P4016.cpp)
add_executable(MinCostMaxFlow MinCostMaxFlow.cpp)
add_executable(P2761 P2761.cpp)
add_executable(P4015 P4015.cpp)
add_executable(P4014 P4014.cpp)
add_executable(P3355 P3355.cpp)
add_executable(Dinic Dinic.cpp)
add_executable(P3254 P3254.cpp)
add_executable(P2763 P2763.cpp)
add_executable(P1251 P1251.cpp)
