cmake_minimum_required(VERSION 3.29)
project(Codeforces_Round_970__Div__3_)

set(CMAKE_CXX_STANDARD 20)

add_executable(Codeforces_Round_970__Div__3_ "main.cpp")

add_executable(A_Sakurakos_Exam "A. Sakurako's Exam.cpp")
add_executable(B_Square_or_Not "B. Square or Not.cpp")

add_executable(B_bitset B_bitset.cpp)

add_executable(test test.cpp)

add_executable(C_Longest_Good_Array C_Longest_Good_Array.cpp)

add_executable(D_Sakurako_s_Hobby D_Sakurako_s_Hobby.cpp)

add_executable(D_dsu D_dsu.cpp)

add_executable(EAlternatingString EAlternatingString.cpp)
