cmake_minimum_required(VERSION 3.30)
project(PTAtest)

set(CMAKE_CXX_STANDARD 20)

add_executable(PTAtest main.cpp)
add_executable(T2 T2.cpp)
add_executable(T5 T5.cpp)
add_executable(T6 T6.cpp)
add_executable(T7 T7.cpp)
add_executable(T8 T8.cpp)
add_executable(T9 T9.cpp)
add_executable(T10 T10.cpp)
add_executable(T11 T11.cpp)
add_executable(T12 T12.cpp)

